--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,40 +1,24 @@
 [project]
 name = "django-govbrds"
-version = "0.0.1"
+dynamic = ["version"]
 description = "Design System do Governo Federal Brasileiro projetos derivados do Django"
-readme = "README.md"
-requires-python = ">=3.8"
-dependencies = ["Django>=4.2"]
-
 keywords = ["django", "govbrds"]
+readme = "README.md"
 license = {file = "LICENSE"}
+requires-python = ">=3.12"
+authors = [
+    {name = "Voreios", email = "fabio@voreios.com.br"}
+]
+dependencies = [
+  "Django>=4.2"
+]
+
+[project.urls]
+Source = "https://github.com/roraimae/django-govbrds"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-authors = [
-    {name = "Fabio Santos", email = "fabio@voreios.com.br"}
-]
-
-classifiers = [
-  "Development Status :: 5 - Production/Stable",
-  "Environment :: Web Environment",
-  "Framework :: Django",
-  "Framework :: Django :: 4.2",
-  "Framework :: Django :: 5.0",
-  "Intended Audience :: Developers",
-  "License :: OSI Approved :: BSD License",
-  "Operating System :: OS Independent",
-  "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "Topic :: Software Development :: Libraries",
-  "Topic :: Utilities",
-]
-
-[tool.coverage.paths]
-package = ["src/django_govbrds", "*/django-govbrds/src/django_govbrds"]
+[tool.hatch.version]
+path = "./src/django_govbrds/__about__.py"
